# VidHarvester

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  VidHarvester-OneFile.spec  VidHarvester.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg
extensions/chrome/: background.js  manifest.json
extensions/firefox/: background.js  manifest.json
proxy/: mitm_addon.py
screenshots/: README.md
scripts/: build_windows.bat  build_windows.ps1  installer.nsi  package_extensions.ps1  post_install_note.txt
src/vidharvester/: app.py
src/vidharvester/capture/: extension_server.py  playwright_capture.py  proxy_controller.py
src/vidharvester/database/: manager.py
src/vidharvester/download/: queue_runner.py  worker.py
src/vidharvester/gui/: animated_progress.py  main_window.py  settings_dialog.py  system_tray.py  theme_manager.py
src/vidharvester/utils/: logger.py  paths.py
