[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidharvester"
version = "0.1.0"
description = "A comprehensive video downloading application"
authors = [{name = "VidHarvester Team"}]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "yt-dlp>=2024.1.1",
    "ffmpeg-python>=0.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "mitmproxy>=10.1.0",
    "playwright>=1.40.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
]

[project.scripts]
vidharvester = "vidharvester.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]
